# saber

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  release-please-config.json  zensical.toml
.github/workflows/: docs.yml  publish-pypi.yaml  release-please.yml
docs/: index.md
docs/api/: import-tomos.md  overview.md  parallel-inference.md  quickstart2d.md  quickstart3d.md
docs/getting-started/: import-tomos.md  installation.md  quickstart.md
docs/tutorials/: import-tomos.md  inference.md  introduction.md  membrane-refinement.md  preprocessing.md  training.md
saber/: groups.py  io.py  main.py  microSABER.py  pretrained_weights.py  tomoSABER.py  utilities.py
saber/adapters/: __init__.py  base.py  preprocessing.py
saber/adapters/sam2/: __init__.py  amg.py  automask.py  predictor.py
saber/adapters/sam3/: __init__.py  predictor.py
saber/analysis/: organelle_statistics.py  refine_membranes.py
saber/classifier/: cli.py  data_split.py  evaluator.py  fabric_trainer.py  groups.py  inference.py  micrograph_training_prep.py  tomogram_training_prep.py  train.py  trainer.py
saber/classifier/datasets/: augment.py  singleZarrDataset.py
saber/classifier/models/: SAM2.py  SAM3.py  predictor.py
saber/classifier/preprocess/: apply_labels.py  data_split.py  groups.py  micro_prep.py  micrograph_training_prep.py  slurm.py  split_merge_data.py  tomo_prep.py  tomo_train_prep_v0.py  tomogram_training_prep.py  training_data_info.py  zarr_writer.py
saber/classifier/tests/: test_sam3_classifier.py
saber/entry_points/: analyze.py  inference_core.py  loaders.py  parallelization.py  run_analysis.py  run_fib_segment.py  run_light_segment.py  run_low_pass_filter.py  run_membrane_refinement.py  run_micrograph_segment.py  run_tomogram_segment.py  run_tomogram_v0.py  segment_methods.py  slurm.py
saber/filters/: masks.py
saber/finetune/: abiou.py  cli.py  dataset.py  helper.py  losses.py  metrics.py  prep.py  train.py  trainer.py
saber/gui/: inspection.ipynb  run.py  segmentation_picker.py  zarr_gui.py
saber/gui/base/: annotation_viewer.py  annotation_viewer_3d.py  zarr_gui.py
saber/gui/text/: annotation_controller.py  data_manager.py  hashtag_manager.py  segmentation_viewer.py  (+2 more)
saber/process/: downsample.py  estimate_thickness.py  gaussian_smooth.py  importers.py  mask_filters.py  slurm_submit.py
saber/sam2/: amg.py  automask.py  automask_parameters.py  tomogram_predictor.py
saber/sam3/: tomogram_predictor.py
saber/segmenters/: base.py  fib.py  general.py  loaders.py  micro.py  propagation.py  tomo.py  utils.py
saber/utils/: cli_inputs.py  importers.py  io.py  preprocessing.py  slurm_submit.py  zarr_writer.py
saber/visualization/: classifier.py  cryosam2.py  embeddings.py  galleries.py  results.py  sam2.py
(+10 files in other folders)
